<resources>
    <string name="app_name">My notes</string>
    <string name="save">Save</string>
    <string name="tab_notes">Notes</string>
    <string name="tab_reminders">Reminders</string>
    <string name="title_notes">Your notes</string>
    <string name="title_hint">Title</string>
    <string name="hint_description">Description</string>
    <string name="reminder_label">is reminder?</string>
    <string name="reminder_date">Fecha de recordatorio</string>
    <string name="remotes_title">Remotas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
